fixed z-index for loader

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -25,33 +25,23 @@ body{
   100%{background-position:11% 0%}
 }
 
-input,button{
+button{
   font-family: 'Lack', sans-serif;
 }
 
-#titleHead{
-    font-family: Lack;
-    font-size: 25px;
-    margin: 10px;
-}
-
-.sticky{
-    position: fixed;
-    top: 0;
-    width: 100%
-}
-
-.header{
-  background: rgba(255, 255, 255, 0.1);
-  border-radius-bottom-left: 16px;
-  border-radius-bottom-right: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-    margin: 0%;
-}
-
+/* CSS Grid stuff here */
 .main{
-    grid: 500px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+  background-color: #fff;
+  padding: 10px;
+  width: 80%;
+}
+.dashbItem{
+    background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
 }
