--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ h1,h2,h3,h4,h5,h6,h7,p,span,button,form{
   left: 50%;
   top: 50%;
   position: absolute;
-  z-index: 9999;
+  z-index: 9996;
   transform: translate(-2em, -2em);
 }
 .ripple {
@@ -130,6 +130,7 @@ h1,h2,h3,h4,h5,h6,h7,p,span,button,form{
   position: absolute;
   padding: 0;
   margin: 0 !important;
+  z-index: 9997;
 }
 
 .ripple div {
@@ -139,10 +140,12 @@ h1,h2,h3,h4,h5,h6,h7,p,span,button,form{
   opacity: 1;
   border-radius: 50%;
   animation: ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  z-index: 9998;
 }
 
 .ripple div:nth-child(2) {
   animation-delay: -0.5s;
+  z-index: 9999;
 }
 
 @keyframes ripple {
